--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -4,30 +4,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <FrameLayout
+            android:id="@+id/base_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary">
+            android:layout_height="76dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="#a0f"
+            >
 
             <TextView
                 android:id="@+id/text_title"
-                android:layout_width="match_parent"
-                android:layout_height="76dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:gravity="center_vertical|start"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
-                android:textAppearance="@android:style/TextAppearance.Material.Large"
-                android:textColor="@color/colorWhite"/>
+                android:text="@string/title_placeholder"
+                android:textColor="@color/colorWhite"
+                />
         </FrameLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <FrameLayout
+            android:id="@+id/base_poster"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/base_title"
+            android:layout_below="@id/base_title"
+            >
 
             <ImageView
                 android:id="@+id/image_poster"
@@ -38,43 +47,74 @@
                 android:contentDescription="@string/movie_poster"
                 android:maxHeight="185dp"
                 android:maxWidth="185dp"
-                android:scaleType="fitCenter"/>
+                android:minHeight="100dp"
+                android:minWidth="100dp"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/ic_launcher"/>
+        </FrameLayout>
 
-            <LinearLayout
+        <LinearLayout
+            android:id="@+id/base_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/base_title"
+            android:layout_toEndOf="@id/base_poster"
+            android:orientation="vertical"
+            >
+
+            <TextView
+                android:id="@+id/text_release_date"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@id/image_poster"
-                android:orientation="vertical">
+                android:layout_height="0dp"
+                android:text="0000"
+                android:layout_weight="1"
+                />
 
-                <TextView
-                    android:id="@+id/text_release_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+            <TextView
+                android:id="@+id/text_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:text="120 min"
+                android:layout_weight="1"
+                />
 
-                <TextView
-                    android:id="@+id/text_vote_avg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+            <TextView
+                android:id="@+id/text_vote_avg"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:text="8.1/10"
+                android:layout_weight="1"
+                />
 
-            </LinearLayout>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:background="@null"
+                android:maxHeight="60dp"
+                android:maxWidth="40dp"
+                android:minHeight="40dp"
+                android:minWidth="40dp"
+                android:src="@mipmap/ic_launcher"
+                android:layout_weight="2"
+                />
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/base_poster"
+            android:layout_below="@id/base_info"
+            >
 
             <TextView
                 android:id="@+id/text_overview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="Overview Overview Overview Overview Overview Overview Overview Overview "
+                />
 
         </FrameLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
