--- a/app/src/main/res/menu/movies_fragment_menu.xml
+++ b/app/src/main/res/menu/movies_fragment_menu.xml
@@ -8,14 +8,14 @@
 
         <item
             android:id="@+id/action_order_popular"
-            android:title="@string/most_popular"
+            android:title="@string/action_most_popular"
             app:showAsAction="never"
             android:checked="true"
             />
 
         <item
             android:id="@+id/action_order_top"
-            android:title="@string/top_rated"
+            android:title="@string/action_top_rated"
             app:showAsAction="never"
             />
     </group>
