--- a/app/src/main/res/layout/item_trailer.xml
+++ b/app/src/main/res/layout/item_trailer.xml
@@ -5,6 +5,7 @@
               android:orientation="horizontal">
 
     <ImageButton
+        android:id="@+id/btn_play_trailer"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
@@ -15,6 +16,7 @@
         />
 
     <TextView
+        android:id="@+id/text_trailer_title"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="8"
