--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="udacity.nanodegree.android.p2.MoviesFragment">
+             tools:context="udacity.nanodegree.android.p2.home.MoviesFragment">
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/grid_movies"
