--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -10,18 +10,18 @@
 
     <fragment
         android:id="@+id/fragment_movies"
-        android:name="udacity.nanodegree.android.p2.home.MoviesFragment"
+        android:name="udacity.nanodegree.android.p2.model.movie.MoviesFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="4"
         tools:layout="@android:layout/list_content"/>
 
-    <fragment
-        android:id="@+id/fragment_detail"
+    <FrameLayout
+        android:id="@+id/main_container"
         android:name="udacity.nanodegree.android.p2.detail.DetailFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="4"
+        android:layout_weight="6"
         tools:layout="@android:layout/list_content"/>
 
 </LinearLayout>
