--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,137 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <data>
+
+        <variable
+            name="vm"
+            type="udacity.nanodegree.android.p2.model.comum.MovieViewModel" />;
+    </data>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@drawable/divider"
-        android:orientation="vertical"
-
-        >
-
-        <TextView
-            android:id="@+id/text_title"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@color/colorPrimary"
-            android:gravity="center_vertical|start"
-            android:textColor="#fff"
-            tools:text="Title"
-            />
-
-        <LinearLayout
-            android:id="@+id/ll_details"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="5"
-            android:orientation="horizontal"
-
-            >
-
-            <ImageView
-                android:id="@+id/image_poster"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/detail_movie_poster"
-                android:maxHeight="185dp"
-                android:maxWidth="185dp"
-                android:minHeight="100dp"
-                android:minWidth="100dp"
-                android:scaleType="fitCenter"
-                android:src="@mipmap/ic_launcher"
-
-                />
-
-            <LinearLayout
-                android:id="@+id/ll_details_info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:divider="@drawable/divider"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="16dp"
-                android:showDividers="middle"
-                >
-
-                <TextView
-                    android:id="@+id/text_release_year"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:padding="2dp"
-                    tools:text="0000"
-                    />
-
-                <TextView
-                    android:id="@+id/text_runtime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:padding="2dp"
-                    tools:text="120 min"
-                    />
-
-                <TextView
-                    android:id="@+id/text_vote_avg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:padding="2dp"
-                    tools:text="8.1/10"
-                    />
-
-                <ImageButton
-                    android:id="@+id/image_favorite"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:maxHeight="60dp"
-                    android:maxWidth="40dp"
-                    android:minHeight="40dp"
-                    android:minWidth="40dp"
-                    android:padding="2dp"
-                    android:src="@drawable/ic_favorite_black_48dp"
-                    />
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/text_overview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            tools:text="Overview"
-            />
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:divider="@drawable/divider"
-            android:orientation="vertical"
-            android:showDividers="beginning">
+            android:orientation="vertical">
 
             <TextView
+                android:id="@+id/text_title"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
-                android:gravity="center_vertical"
-                android:text="@string/detail_title_trailers"/>
+                android:layout_height="60dp"
+                android:background="@color/colorPrimary"
+                android:gravity="center_vertical|start"
+                android:text="@{vm.title ?? ``}"
+                android:textColor="#fff"
+                tools:text="Title" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_trailers"
+            <LinearLayout
+                android:id="@+id/ll_details"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="5"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/image_poster"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/detail_movie_poster"
+                    android:maxHeight="185dp"
+                    android:maxWidth="185dp"
+                    android:minHeight="100dp"
+                    android:minWidth="100dp"
+                    android:scaleType="fitCenter"
+                    app:imageUrl="@{@string/tmdb_image_base_path(vm.posterImage)}"
+                    tools:src="@mipmap/ic_launcher" />
+
+                <LinearLayout
+                    android:id="@+id/ll_details_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:divider="@drawable/divider"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="16dp"
+                    android:showDividers="middle">
+
+                    <TextView
+                        android:id="@+id/text_release"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:padding="2dp"
+                        android:text="@{@string/dateToYear(vm.releaseDate) ?? ``}"
+                        tools:text="0000" />
+
+                    <TextView
+                        android:id="@+id/text_runtime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:padding="2dp"
+                        android:text="@{@string/min(vm.runtime) ?? ``}"
+                        tools:text="120 min" />
+
+                    <TextView
+                        android:id="@+id/text_vote_avg"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:padding="2dp"
+                        android:text="@{@string/max_rating(vm.voteAvg)?? ``}"
+                        tools:text="8.1/10" />
+
+                    <CheckBox
+                        android:id="@+id/image_favorite"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:button="@drawable/favorite_button_selector"
+                        android:checked="@{vm.favorite}"
+                        android:clickable="true"
+                        android:maxHeight="60dp"
+                        android:maxWidth="40dp"
+                        android:minHeight="40dp"
+                        android:minWidth="40dp"
+                        android:onClick="@{(view) -> vm.onFavoriteClick (view)}"
+                        android:padding="2dp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/text_overview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@{vm.synopsys}"
+                tools:text="Overview" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="9"/>
+                android:layout_height="match_parent"
+                android:divider="@drawable/divider"
+                android:orientation="vertical"
+                android:showDividers="beginning">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:gravity="center_vertical"
+                    android:text="@string/detail_title_trailers" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_trailers"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="9" />
+            </LinearLayout>
         </LinearLayout>
-
-    </LinearLayout>
-
-</ScrollView>
+    </ScrollView>
+</layout>
