--- a/app/src/main/res/layout/item_trailer.xml
+++ b/app/src/main/res/layout/item_trailer.xml
@@ -1,27 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageButton
-        android:id="@+id/btn_play_trailer"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:background="@null"
-        android:src="@drawable/ic_play_arrow_black_48dp"
-        android:layout_gravity="left"
+    <data>
 
-        />
+        <variable
+            name="vm"
+            type="udacity.nanodegree.android.p2.model.detail.TrailerViewModel"/>
 
-    <TextView
-        android:id="@+id/text_trailer_title"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="8"
-        android:gravity="center_vertical|left"
+    </data>
 
-        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:gravity="center_vertical"
+        android:onClick="@{(view) -> vm.onItemClick(view)}"
+        android:orientation="horizontal"
+        >
 
-</LinearLayout>
+        <ImageButton
+            android:id="@+id/btn_play_trailer"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="left"
+            android:layout_weight="2"
+            android:background="@null"
+            android:src="@drawable/ic_play_arrow_black_24dp"
+
+            />
+
+        <TextView
+            android:id="@+id/text_trailer_title"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="8"
+            android:gravity="center_vertical|left"/>
+
+    </LinearLayout>
+
+</layout>
