--- a/app/src/main/res/layout/item_trailer.xml
+++ b/app/src/main/res/layout/item_trailer.xml
@@ -36,7 +36,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="8"
-            android:gravity="center_vertical|left"/>
+            android:gravity="center_vertical|left"
+            android:text="@{vm.title}"/>
 
     </LinearLayout>
 
