--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="vm"
-            type="udacity.nanodegree.android.p2.model.comum.MovieViewModel" />;
+            type="udacity.nanodegree.android.p2.model.comum.MovieViewModel"/>;
 
         <variable
             name="handler"
-            type="udacity.nanodegree.android.p2.model.detail.DetailHandler"/>
+            type="udacity.nanodegree.android.p2.model.detail.DetailHandler"
+
+        >
+            </variable>
 
     </data>
 
@@ -33,7 +36,7 @@
                 android:gravity="center_vertical|start"
                 android:text="@{vm.title ?? ``}"
                 android:textColor="#fff"
-                tools:text="Title" />
+                tools:text="Title"/>
 
             <LinearLayout
                 android:id="@+id/ll_details"
@@ -53,7 +56,7 @@
                     android:minWidth="100dp"
                     android:scaleType="fitCenter"
                     app:imageUrl="@{@string/tmdb_image_base_path(vm.posterImage)}"
-                    tools:src="@mipmap/ic_launcher" />
+                    tools:src="@mipmap/ic_launcher"/>
 
                 <LinearLayout
                     android:id="@+id/ll_details_info"
@@ -72,8 +75,8 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:padding="2dp"
-                        android:text="@{@string/dateToYear(vm.releaseDate) ?? ``}"
-                        tools:text="0000" />
+                        android:text="@{vm.formatReleaseDate(context) ?? ``}"
+                        tools:text="0000"/>
 
                     <TextView
                         android:id="@+id/text_runtime"
@@ -81,8 +84,8 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:padding="2dp"
-                        android:text="@{@string/min(vm.runtime) ?? ``}"
-                        tools:text="120 min" />
+                        android:text="@{vm.formatRuntime(context) ?? ``}"
+                        tools:text="120 min"/>
 
                     <TextView
                         android:id="@+id/text_vote_avg"
@@ -90,8 +93,8 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:padding="2dp"
-                        android:text="@{@string/max_rating(vm.voteAvg)?? ``}"
-                        tools:text="8.1/10" />
+                        android:text="@{vm.formatVoteAvg(context) ?? ``}"
+                        tools:text="8.1/10"/>
 
                     <CheckBox
                         android:id="@+id/image_favorite"
@@ -107,7 +110,7 @@
                         android:minHeight="40dp"
                         android:minWidth="40dp"
                         android:onClick="@{(v) -> handler.onFavoriteClick(v, vm)}"
-                        android:padding="2dp" />
+                        android:padding="2dp"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -117,7 +120,7 @@
                 android:layout_height="wrap_content"
                 android:padding="16dp"
                 android:text="@{vm.synopsys}"
-                tools:text="Overview" />
+                tools:text="Overview"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -131,13 +134,13 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:text="@string/detail_title_trailers" />
+                    android:text="@string/detail_title_trailers"/>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_trailers"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="9" />
+                    android:layout_weight="9"/>
             </LinearLayout>
 
             <LinearLayout
@@ -152,13 +155,13 @@
                     android:layout_height="0dp"
                     android:layout_weight="2"
                     android:gravity="center_vertical"
-                    android:text="@string/detail_title_user_reviews" />
+                    android:text="@string/detail_title_user_reviews"/>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_reviews"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="9" />
+                    android:layout_weight="9"/>
             </LinearLayout>
 
         </LinearLayout>
