--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -26,7 +26,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:text="@string/author"/>
+            android:text="@string/author"
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        />
 
         <TextView
             android:id="@+id/text_author"
@@ -37,7 +39,8 @@
             android:layout_toRightOf="@+id/lbl_author"
             android:gravity="center_vertical|left"
             android:text="@{vm.author}"
-            tools:text="Alexandre Alessi"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            tools:text="alex"/>
 
         <TextView
             android:id="@+id/text_content"
