--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -37,7 +37,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/lbl_author"
-            android:gravity="center_vertical|left"
+            android:gravity="center_vertical|start"
             android:text="@{vm.author}"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             tools:text="alex"/>
