--- a/app/src/main/res/layout/item_trailer.xml
+++ b/app/src/main/res/layout/item_trailer.xml
@@ -24,7 +24,7 @@
             android:id="@+id/btn_play_trailer"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_gravity="left"
+            android:layout_gravity="start"
             android:layout_weight="2"
             android:background="@null"
             android:src="@drawable/ic_play_arrow_black_24dp"
@@ -36,7 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="8"
-            android:gravity="center_vertical|left"
+            android:gravity="center_vertical|start"
             android:text="@{vm.title}"/>
 
     </LinearLayout>
