--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -6,10 +6,7 @@
     android:id="@+id/content_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="@dimen/detail_padding"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="udacity.nanodegree.android.p2.DetailActivity"
     tools:showIn="@layout/activity_detail">
