--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:padding="8dp">
+        >
 
         <TextView
             android:id="@+id/lbl_author"
@@ -28,6 +28,7 @@
             android:layout_alignParentTop="true"
             android:text="@string/author"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+            android:padding="@dimen/review_padding"
         />
 
         <TextView
@@ -35,12 +36,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp"
+
             android:layout_toRightOf="@+id/lbl_author"
             android:gravity="center_vertical|start"
             android:text="@{vm.author}"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-            tools:text="alex"/>
+            tools:text="alex"
+            android:padding="@dimen/review_padding"
+        />
 
         <TextView
             android:id="@+id/text_content"
@@ -49,6 +52,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/lbl_author"
             android:text="@{vm.content}"
+            android:padding="@dimen/review_padding"
             tools:text="content content content content content \r\n content content"/>
 
     </RelativeLayout>
