--- a/app/src/main/res/layout/item_trailer.xml
+++ b/app/src/main/res/layout/item_trailer.xml
@@ -15,7 +15,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:onClick="@{() -> handler.onItemClick(vm)}"
         android:orientation="horizontal">
@@ -27,6 +27,7 @@
             android:layout_gravity="start"
             android:layout_weight="2"
             android:background="@null"
+            android:onClick="@{() -> handler.onItemClick(vm)}"
             android:src="@drawable/ic_play_arrow_black_24dp"
 
             />
